Fix HTML structure and update bundle URL

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             // Log it or use it as needed
             console.log("Extracted URL:", extractedURL);
 
-            let bundleUrl = "doom.jsdos"
+            let bundleUrl = "https://doszone-uploads.s3.dualstack.eu-central-1.amazonaws.com/original/2X/6/60b165c86771eadf24cb2f81aef4656b85d167a6.jsdos"
             // bundleUrl = "https://cdn.dos.zone/original/2X/6/6a2bfa87c031c2a11ab212758a5d914f7c112eeb.jsdos"; // dagnerous dave 2
             // bundleUrl = "https://cdn.dos.zone/original/2X/1/1b063b2520052ebb504184667ac95e72423331de.jsdos"; // lost vikings
             // bundleUrl = "https://cdn.dos.zone/custom/dos/doom.jsdos"; // doom
@@ -70,5 +70,6 @@
         
     </script>
 </body>
+
 
 </html>
